--- a/Demos/SendAndReceiveEvents/RecceiveEvents/ReceiveEvents.csproj
+++ b/Demos/SendAndReceiveEvents/RecceiveEvents/ReceiveEvents.csproj
@@ -7,6 +7,11 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.3.0-beta.4" />
+    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
