--- a/Demos/SendAndReceiveEvents/SendEvents/SendEvents.csproj
+++ b/Demos/SendAndReceiveEvents/SendEvents/SendEvents.csproj
@@ -2,12 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.2.0" />
-    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.2.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.3.0-beta.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
