--- a/Demos/Event-Driven Architecture/Common/Common.csproj
+++ b/Demos/Event-Driven Architecture/Common/Common.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>TaleLearnCode.EventDrivenArchitectureInTheCloud</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Bogus" Version="31.0.3" />
+  </ItemGroup>
+
 </Project>
