--- a/Demos/Event-Driven Architecture/OrderSimulator/OrderSimulator.csproj
+++ b/Demos/Event-Driven Architecture/OrderSimulator/OrderSimulator.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.3.0-beta.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
