--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,5 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /Demos/SendAndReceiveEvents/Common/Settings.cs
+/Demos/SendAndReceiveEvents/RecceiveEvents/Settings.cs
+/Demos/SendAndReceiveEvents/SendEvents/Settings.cs
