--- a/Demos/SendAndReceiveEvents/RecceiveEvents/ReceiveEvents.csproj
+++ b/Demos/SendAndReceiveEvents/RecceiveEvents/ReceiveEvents.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.3.0-beta.4" />
-    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.2.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.0" />
+    <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
