--- a/Demos/Event-Driven Architecture/OrderSimulator/OrderSimulator.csproj
+++ b/Demos/Event-Driven Architecture/OrderSimulator/OrderSimulator.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.3.0-beta.4" />
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.0" />
   </ItemGroup>
 
   <ItemGroup>
